# pycon-at-2026-workshop-ai-tdd

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  PyCon AT Workshop - AISWE.pptx  README.md  pyproject.toml
docs/evolution/: 2026-04-17-shipping-costs.md
docs/feature/pycon-austria-2026-workshop/discover/: problem-validation.md
docs/feature/pycon-austria-2026-workshop/discuss/: jtbd-four-forces.md  jtbd-job-stories.md
docs/feature/shipping-costs/deliver/: execution-log.json  roadmap.json
docs/feature/shipping-costs/design/: upstream-changes.md  wave-decisions.md
docs/feature/shipping-costs/discuss/: dor-validation.md  journey-calculate-shipping-fee-visual.md  journey-calculate-shipping-fee.feature  outcome-kpis.md  prioritization.md  shared-artifacts-registry.md  story-map.md  user-stories.md  wave-decisions.md
docs/feature/shipping-costs/slices/: slice-01-flat-rate-calculation.md  slice-02-zone-pricing.md  slice-03-express-surcharge.md  slice-04-input-validation.md
docs/product/: jobs.yaml
docs/product/architecture/: adr-001-test-structure.md  adr-002-functional-paradigm.md  brief.md
docs/product/journeys/: shipping-costs-visual.md  shipping-costs.yaml
docs/ux/shipping-costs/: journey-calculate-shipping-fee.yaml
src/shipping_costs/: __init__.py  calculator.py  main.py
src/shopping_cart/: main.py
tests/acceptance/: test_shipping_costs.py  test_workshop.py
tests/features/: test_shipping_costs.py  test_shipping_costs_edge_cases.py
tests/unit/: test_logic.py  test_weight_calculation.py
