[project]
name = "workshop"
version = "0.1.0"
description = "Workshop project: vibe coding with guard rails using TDD + ATDD"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "pyright[nodejs]>=1.1",
  "pre-commit>=3.7",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-q",
  "--strict-markers",
  "--strict-config",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# E/F: pycodestyle/pyflakes, I: import sorting, B: bugbear, UP: pyupgrade

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
