[project]
name = "workshop"
version = "0.1.0"
description = "Workshop project"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.4",
  "ty",
  "pre-commit>=3.7",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-q",
  "--strict-markers",
  "--strict-config",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["mutants/"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# E/F: pycodestyle/pyflakes, I: import sorting, B: bugbear, UP: pyupgrade

[tool.ty.environment]
python-version = "3.11"

[dependency-groups]
dev = [
    "mutmut>=3.5.0",
]
# typeCheckingMode = "strict" is not directly supported, but ty is strict by default in many ways
# reportMissingImports = true
# reportMissingTypeStubs = false
